clusters/mlx-home-dev/mlx-charts/mlx-portfolio/mlx-portfolio-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mlx-portfolio-ingress
  namespace: mlx-portfolio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev.mitchell-lemons.info`) 
      services:
        - kind: Service
          name: mlx-portfolio
          passHostHeader: true
          port: 80
